Fixed overlapping iPhone  bug on contact page and tested form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,7 +237,7 @@ footer div {
 }
 #contact {
     float: left;
-    font-size: 25px;
+    font-size: 22px;
     vertical-align: middle;
 }
 #linkedin-logo {
